--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header {
 }
 
 #form {
+  position: absolute;
   font-weight: bold;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   margin-left: 500px;
